--- a/style.css
+++ b/style.css
@@ -1,3 +1,17 @@
+@keyframes shake {
+    0% { transform: translate(1px, 1px) rotate(0deg); }
+    10% { transform: translate(-1px, -2px) rotate(-1deg); }
+    20% { transform: translate(-3px, 0px) rotate(1deg); }
+    30% { transform: translate(3px, 2px) rotate(0deg); }
+    40% { transform: translate(1px, -1px) rotate(1deg); }
+    50% { transform: translate(-1px, 2px) rotate(-1deg); }
+    60% { transform: translate(-3px, 1px) rotate(0deg); }
+    70% { transform: translate(3px, 1px) rotate(-1deg); }
+    80% { transform: translate(-1px, -1px) rotate(1deg); }
+    90% { transform: translate(1px, 2px) rotate(0deg); }
+    100% { transform: translate(1px, -2px) rotate(-1deg); }
+  }
+
 :root {
     --pink: #BD78B0;
     --brown: #6B4837;
@@ -14,12 +28,21 @@ html {
 }
 
 body {
+    font-family: 'Style Script';
     max-width: 800px;
     margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
+header{
+}
+header h1{
+    font-size: 56px;
+    margin:15px
+}
+
 
 body main {
     width: 80%;
@@ -35,7 +58,7 @@ body main section {
     backdrop-filter: blur( 5.0px );
     border-radius: 10px;
     border: 2px solid var(--lightGreen);
-    height: 500px;
+    height: 300px;
     width: 30%;
     display: flex; 
     flex-direction: column-reverse; 
@@ -50,18 +73,19 @@ body main section div {
 
 body #moveCount{
     height: fit-content;
-    margin: 50px;
+    margin: 5px;
 }
 
 body div {
-    height: 100px;
+    height: 75px;
     text-align: center;
     margin: 0 auto;
 }
 
 body #holder {
     margin: 0 auto;
-    width: 30%;
+    width: 24%;
+    height: 75px
 }
 
 body #disc4{
@@ -121,21 +145,39 @@ body #backgroundSound {
 
 }
 
+body #moveCount{
+    font-size: 20px
+}
+
 .messageSection{
     margin: 20px 0;
     display:flex;
     flex-direction: column;
     height: 54px;
+    font-weight: 900;
+    letter-spacing: 1px;
+    justify-content: flex-end;
 }
 .messageSection input {
     height: 24px;
     align-self: flex-end;
     margin: 0 auto;
 }
-.invalidAnimation{
 
+.messageSection div {
+    height: 34px;
+    margin: 0 auto;
+    color: #FF4438
+}
+.invalidAnimation{
+    animation-name: shake;
+    animation-duration:0.75s ;
 }
 
 .hidden {
     display: none;
+}
+
+footer p{
+    margin:10px
 }
