--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ header{
 }
 header h1{
     font-size: 56px;
-    margin:15px
+    margin:15px;
+    text-align: center;
 }
 
 
@@ -74,6 +75,7 @@ body main section div {
 body #moveCount{
     height: fit-content;
     margin: 5px;
+    text-shadow: 2px 2px 2px white;
 }
 
 body div {
@@ -113,7 +115,7 @@ body #disc3{
 }
 
 body #disc2{
-    background-color: var(--towerBackground);
+    background-color: var(56px--towerBackground);
     box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.37);
     backdrop-filter: blur( 6.0px );
     border-radius: 10px;
@@ -136,9 +138,6 @@ body #disc1{
     width: 100%;
 }
 
-div#invalid-movement {
-    height: 30px;
-}
 
 body #backgroundSound {
     display:none
@@ -153,21 +152,29 @@ body #moveCount{
     margin: 20px 0;
     display:flex;
     flex-direction: column;
-    height: 54px;
     font-weight: 900;
     letter-spacing: 1px;
     justify-content: flex-end;
 }
 .messageSection input {
-    height: 24px;
+    height: 46px;
+    color:white;
     align-self: flex-end;
     margin: 0 auto;
+    padding : 5px 10px;
+    border: 1px solid transparent;
+    border-radius: 8px;
+    font-size: 30px;
+    background: #584d6e
+
+    
 }
 
 .messageSection div {
-    height: 34px;
-    margin: 0 auto;
-    color: #FF4438
+    height: 30px;
+    margin: 5px auto;
+    color: #FF4438;
+    text-shadow: 1px 1px 1px black;
 }
 .invalidAnimation{
     animation-name: shake;
@@ -180,4 +187,14 @@ body #moveCount{
 
 footer p{
     margin:10px
+}
+
+@media (min-width: 768px){
+    .messageSection input:hover {
+        transition: 0.5s;
+        border: 1px solid #584d6e;
+        background:white;
+        color: black;
+        cursor:pointer;
+    }
 }
