--- a/style.css
+++ b/style.css
@@ -12,6 +12,14 @@
     100% { transform: translate(1px, -2px) rotate(-1deg); }
   }
 
+@keyframes ShadeOut {
+    0.0%{
+    }
+    100%{
+        opacity: 0;
+    }
+}
+
 :root {
     --pink: #BD78B0;
     --brown: #6B4837;
@@ -150,6 +158,7 @@ body #moveCount{
 
 .messageSection{
     margin: 20px 0;
+    height: 76px;
     display:flex;
     flex-direction: column;
     font-weight: 900;
@@ -187,6 +196,15 @@ body #moveCount{
 
 footer p{
     margin:10px
+}
+.shadeOutAnimation{
+    animation-name: ShadeOut;
+    animation-duration:0.5s
+}
+.shadeInAnimation{
+    animation-direction: reverse;
+    animation-name: ShadeOut;
+    animation-duration:0.5s
 }
 
 @media (min-width: 768px){
