--- a/style.css
+++ b/style.css
@@ -61,8 +61,6 @@ body {
     align-items: center;
 }
 
-header{
-}
 header h1{
     font-size: 56px;
     margin:15px;
@@ -170,7 +168,7 @@ body #disc1{
 }
 
 
-body #backgroundSound {
+body #backgroundSound, #errorSound{
     display:none
 
 }
