--- a/style.css
+++ b/style.css
@@ -256,7 +256,7 @@ footer{
     text-align: center;
     padding:10px;
     font-family: 'Noto Sans JP', sans-serif;
-    margin-top: 10px;
+    margin-top: auto;
     justify-content: center;
     align-items: center;
     position: fixed;
@@ -286,6 +286,12 @@ div#win{
     animation: bluePulse 3s ease 0s infinite normal none;
     width:23px;
     margin:1px 0 0 0;
+}
+
+a{
+    animation: bluePulse 3s ease 0s infinite normal none;
+    color:black;
+    text-decoration:none;
 }
 
 @media screen and (min-width:301px) and (max-width:720px){
