fix: adicionado margin ao footer, e mudado o contador de movimentos

--- a/style.css
+++ b/style.css
@@ -261,7 +261,7 @@ footer{
     text-align: center;
     padding:10px;
     font-family: 'Noto Sans JP', sans-serif;
-    margin-top: auto;
+    margin-top: 50px;
     justify-content: center;
     align-items: center;
     position: relative;
